Revert "Updated file upload view in portfolio new and fixed cover fit in home page on mobiles"
This reverts commit 144a94f2d19fb5f84726ecc3ed6b7890c68e6463.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,7 +154,7 @@ body {
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
   background: image-url('home_bg.jpg') no-repeat;
-  background-size: cover;
+  background-size: 100%;
   background-position: center;
 }
 
